--- a/singolo1.html
+++ b/singolo1.html
@@ -4,9 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="singolo1.css">
-    <title>Document</title>
+    <title>Singolo</title>
 </head>
 <body>
-    
-</body>
+    <div class="header-block">
+      <header>
+        <h1 class="logo"><a href="#">Singolo</a><span>*</span></h1>
+        <nav>
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+
+    <div class="slider-block">
+
+      <section class="slider">
+        <button class="button left" type="button" aria-label="Slide previous"></button>
+        <div class="images-phone">
+          <img width="240" height="483" src="assets/iphone-yellow.png" alt="iPhone yellow">
+          <img width="484" height="240" src="assets/iphone-blue.png" alt="iPhone blue">
+        </div>
+  
+        <button class="button right" type="button" aria-label="Slide next"></button>
+      </section>
+
+    </div>
+  
+    <div class="services-block">
+        
+      <section class="services">
+        <h2>Our Services</h2>
+        <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+  
+        <div class="services-elements">
+
+          <div class="services-elements--service custom-design">
+            <h3>Custom Design</h3>
+            <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.</p>
+          </div>
+          <div class="services-elements--service inovative-ideas">
+            <h3>Inovative Ideas</h3>
+              <p>Quisque luctus, quam eget molestie com&shy;modo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.</p>
+          </div>
+          <div class="services-elements--service love-is-the-answer">
+            <h3>Love Is The Answer</h3>
+            <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.</p>
+          </div>
+          <div class="services-elements--service responsive-layout">
+            <h3>Responsive Layout</h3>
+            <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Prae&shy;sent elit leo.</p>
+          </div>
+          <div class="services-elements--service support-24-7">
+            <h3>24 / 7 Support</h3>
+            <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellen&shy;tesque egestas venenatis lorem .</p>
+          </div>
+          <div class="services-elements--service feel-like-a-star">
+            <h3>Feel Like A Star</h3>
+            <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+          </div>
+  
+        </div>
+      </section>
+    </div>
+  
+  </body>
 </html>
