--- a/singolo1.html
+++ b/singolo1.html
@@ -23,8 +23,8 @@
     </div>
 
     <div class="slider-block">
-
       <section class="slider">
+        <h2 class="slider-text-none">Slider Singolo</h2>
         <button class="button left" type="button" aria-label="Slide previous"></button>
         <div class="images-phone">
           <img width="240" height="483" src="assets/iphone-yellow.png" alt="iPhone yellow">
@@ -37,7 +37,7 @@
     </div>
   
     <div class="services-block">
-        
+
       <section class="services">
         <h2>Our Services</h2>
         <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
