feat: add singolo 3

--- a/singolo2.html
+++ b/singolo2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="assets/fonts/fonts.css">
+    <link rel="stylesheet" href="assets/fonts/fontsfull.css">
     <link rel="stylesheet" href="singolo2.css">
     <title>Singolo2</title>
 </head>
