fead: add slider back

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </header>
     </div>
 
-    <div id="Home" class="slider-block">
+    <div id="Home" class="slider-block red">
       <section class="slider">
 
         <h2 class="slider-text-none">Slider Singolo</h2>
